--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
   <script src="https://code.jquery.com/jquery.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.0.0/js/bootstrap.bundle.min.js"></script>
   <!-- teams js file -->
-  <script src=""></script>
+  <script src="script.js"></script>
 
 </body>
 
